--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -21,11 +21,9 @@
             <ul>
                 <li class="link_trigger link1"><a href="#home_page">О НАС</a>
                 </li>
-                <li class="link_trigger link2"><a href="#slide1">СОБЫТИЯ</a>
+                <li class="link_trigger link2"><a href="#slide1">КОЛИЗЕИ</a>
                 </li>
-                <li class="link_trigger link3"><a href="#slide2">КОЛИЗЕИ</a>
-                </li>
-                <li class="link_trigger link4"><a href="#slide3">ГАЛЕРЕЯ</a>
+                <li class="link_trigger link4"><a href="#slide2">КОНТАКТЫ</a>
                 </li>
                 <div class="icons_block">
                     <div class="link1 link_trigger">
@@ -102,13 +100,10 @@
                     </div>
                     <div class="right_section">
                         <ul>
-                            <li class="link_trigger link1"><a href="#">СОБЫТИЯ</a>
+                            <li class="link_trigger link1"><a href="#">КОЛИЗЕИ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger link2"><a href="#">КОЛИЗЕИ</a>
-                                <div class="bg"></div>
-                            </li>
-                            <li class="link_trigger link3"><a href="#">ГАЛЕРЕЯ</a>
+                            <li class="link_trigger link2"><a href="#">КОНТАКТЫ</a>
                                 <div class="bg"></div>
                             </li>
                         </ul>
@@ -331,34 +326,8 @@
             <div class="container">
                 <div class="slider_content">
                     <div class="slider2">
-                        <!--(НОВОСТИ_1) Первая страница Основного блока-->
-                        <div id="slide1" class="slide slide1">
-                            <span class="title">События</span>
-                            <span class="arrow_left_slide1"></span>
-                            <span class="arrow_right_slide1"></span>
-                            <span class="bottom">
-                                <p class="left">► 19675</p>
-                                <img src="img/logo_header_second.svg" alt="logo">
-                                <p class="right">/// ГОРЯЧИЕ НОВОСТИ</p>
-                            </span>
-                            <span class="bottom_line"></span>
-                            <div class="slider_news">
-                                <div class="slide">
-                                    <a href="#">
-                                        <h6><strong>Прогноз:</strong> к 2020 году выручка от киберспорта<br> составит 1.8 млрд $</h6>
-                                    </a>
-                                </div>
-                                <div class="slide">
-                                    <div class="slide">
-                                        <a href="#">
-                                            <h6><strong>Прогноз:</strong> к 2020 году выручка от киберспорта<br> составит 1.8 млрд $</h6>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <!--(кОЛЕЗЕИ) Третья страница Основного блока-->
-                        <div id="slide2" class="slide slide3">
+                        <div id="slide1" class="slide slide3">
                             <span class="title">Колизеи</span>
                             <div class="tab_item">
                                 <div class="content">
@@ -482,140 +451,11 @@
                                 </div>
                             </div>
                         </div>
-                        <!--(КАРТА)Четвертая страница Основного блока-->
-                        <div id="slide3" class="slide slide4">
-                            <span class="title">Фотогалерея</span>
-                            <div class="slider_gallery">
-                                <div class="slide slide_first">
-                                    <div class="block_left">
-                                        <h6>Фотогалерея</h6>
-                                        <p class="date">Обнавлено: 16.05 / 18.12.2017</p>
-                                        <ul>
-                                            <li><a href="#"><span>►</span> Турниры и кубки</a></li>
-                                            <li><a href="#"><span>►</span> События и мероприятия</a></li>
-                                            <li><a href="#"><span>►</span> Команды и игроки</a></li>
-                                            <li><a href="#"><span>►</span> Избранное</a></li>
-                                        </ul>
-                                        <p class="photo">ФОТО НЕДЕЛИ:</p>
-                                    </div>
-                                    <div class="center_block">
-                                        <span class="arrow_left_photo"></span>
-                                        <span class="arrow_right_photo"></span>
-                                        <div class="photo_slider">
-                                            <div class="slide"><img src="img/photo.jpg" alt=""></div>
-                                            <div class="slide"><img src="img/photo.jpg" alt=""></div>
-                                        </div>
-                                    </div>
-                                    <div class="right_block">
-                                        <div class="img">
-                                            <img src="img/bg_gallery.jpg" alt="">
-                                            <a href="#" class="overlay"></a>
-                                        </div>
-                                        <img src="img/logos.png" alt="" class="logo">
-                                        <div class="txt">
-                                            <p>◄ ФОТОАЛЬБОМ CSA ►</p>
-                                        </div>
-                                        <div class="line"></div>
-                                    </div>
-                                </div>
-                                <div class="slide cards">
-                                    <div class="block_left">
-                                        <div class="desc">
-                                            <h6><strong>EPICENTER</strong><br>CYBER GAME<br>DOTA 2</h6>
-                                            <img src="img/logo_header_second.svg" alt="">
-                                            <p class="title">Даты проведения:</p>
-                                            <p class="date">15.12.2017 - 17.12.2017</p>
-                                        </div>
-                                        <div class="img_block">
-                                            <img class="image" src="img/epicentr.jpg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="block_right">
-                                        <div class="img_block">
-                                            <img class="image" src="img/team2.jpg" alt="">
-                                        </div>
-                                        <div class="desc">
-                                            <h6>КОМАНДА<br><strong>EPICENTER</strong><br>НА СБОРАХ</h6>
-                                            <img src="img/logo_header_second.svg" alt="">
-                                            <p class="title">Даты проведения:</p>
-                                            <p class="date">15.12.2017 - 17.12.2017</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="slide cards">
-                                    <div class="block_left">
-                                        <div class="desc">
-                                            <h6><strong>OVERPOWER</strong><br>готовится<br>к чемпионату</h6>
-                                            <img src="img/logo_header_second.svg" alt="">
-                                            <p class="title">Даты проведения:</p>
-                                            <p class="date">15.12.2017 - 17.12.2017</p>
-                                        </div>
-                                        <div class="img_block">
-                                            <img class="image" src="img/team.jpg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="block_right">
-                                        <div class="img_block">
-                                            <img class="image" src="img/kubok.jpg" alt="">
-                                        </div>
-                                        <div class="desc">
-                                            <h6>ПОБЕДИТЕЛИ<br><strong>EPICENTER</strong><br><strong>Championship</strong></h6>
-                                            <img src="img/logo_header_second.svg" alt="">
-                                            <p class="title">Даты проведения:</p>
-                                            <p class="date">15.12.2017 - 17.12.2017</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="slide cards">
-                                    <div class="block_left">
-                                        <div class="desc">
-                                            <h6><strong>EPICENTER</strong><br>CYBER GAME<br>DOTA 2</h6>
-                                            <img src="img/logo_header_second.svg" alt="">
-                                            <p class="title">Даты проведения:</p>
-                                            <p class="date">15.12.2017 - 17.12.2017</p>
-                                        </div>
-                                        <div class="img_block">
-                                            <img class="image" src="img/epicentr.jpg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="block_right">
-                                        <div class="img_block">
-                                            <img class="image" src="img/team2.jpg" alt="">
-                                        </div>
-                                        <div class="desc">
-                                            <h6>КОМАНДА<br><strong>EPICENTER</strong><br>НА СБОРАХ</h6>
-                                            <img src="img/logo_header_second.svg" alt="">
-                                            <p class="title">Даты проведения:</p>
-                                            <p class="date">15.12.2017 - 17.12.2017</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="slide cards">
-                                    <div class="block_left">
-                                        <div class="desc">
-                                            <h6><strong>OVERPOWER</strong><br>готовится<br>к чемпионату</h6>
-                                            <img src="img/logo_header_second.svg" alt="">
-                                            <p class="title">Даты проведения:</p>
-                                            <p class="date">15.12.2017 - 17.12.2017</p>
-                                        </div>
-                                        <div class="img_block">
-                                            <img class="image" src="img/team.jpg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="block_right">
-                                        <div class="img_block">
-                                            <img class="image" src="img/kubok.jpg" alt="">
-                                        </div>
-                                        <div class="desc">
-                                            <h6>ПОБЕДИТЕЛИ<br><strong>EPICENTER</strong><br><strong>Championship</strong></h6>
-                                            <img src="img/logo_header_second.svg" alt="">
-                                            <p class="title">Даты проведения:</p>
-                                            <p class="date">15.12.2017 - 17.12.2017</p>
-                                        </div>
-                                    </div>
-                                </div>
+
+                        <div id="slide2" class="slide slide1">
+                            <span class="title">Контакты</span>
+                            <div class="contacts_container">по вопросам сотрудничества <a href="mailto:info@colizeumarena.com">info@colizeumarena.com</a> и <a href="tel:89251000123">+7(925)1000123</a>
                             </div>
-                            <span class="btn_bottom"></span>
                         </div>
                     </div>
                 </div>
@@ -624,7 +464,6 @@
                 <ul>
                     <li class="dot dot1"><span></span></li>
                     <li class="dot dot2"><span></span></li>
-                    <li class="dot dot3"><span></span></li>
                     <span class="span_left">
                     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
                 </span>
