--- a/portfolio/Crystal/app/index.html
+++ b/portfolio/Crystal/app/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
     <head>
         <meta charset="utf-8">
         <title>Crystal</title>
@@ -12,14 +11,13 @@
         <link rel="stylesheet" href="css/all.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
-
     <body>
         <div id="wrapper">
-        	  <a href="#" class="fixed_btn"></a>
+            <a href="#" class="fixed_btn"></a>
             <header>
                 <div class="container">
-                	  <span class="main_number">+7 (910) 946 99 55</span>
-                	  <span class="header_title">ЛАБОРАТОРИЯ УЛЫБОК</span>
+                    <span class="main_number">+7 (910) 946 99 55</span>
+                    <span class="header_title">ЛАБОРАТОРИЯ УЛЫБОК</span>
                     <div class="header_content">
                         <div class="left_section">
                             <ul>
@@ -40,39 +38,205 @@
                         </div>
                     </div>
                     <div class="socials_block">
-                    	 <a class="insta_icon" href="#"></a>
-                    	 <a class="facebook_icon" href="#"></a>
-                    	 <a class="vk_icon" href="#"></a>
+                        <a class="insta_icon" href="#"></a>
+                        <a class="facebook_icon" href="#"></a>
+                        <a class="vk_icon" href="#"></a>
                     </div>
                 </div>
             </header>
             <div class="main-page">
-            	 <div class="top_banner">
-            	 	  <div class="container">
-            	 	  <span class="decoration_item1"></span>
-            	 	  <span class="decoration_item2"></span>
-            	 	  <span class="decoration_item3"></span>
-            	 	  <span class="decoration_item4"></span>
-            	 	  <span class="txt">NEW BEAUTY FORMULA</span>
-            	 	  <span class="logo_banner"></span>
-            	 	  	  <div class="banner_slider">
-            	 	  	  	   <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
-            	 	  	  	   <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
-            	 	  	  	   <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
-            	 	  	  	   <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
-            	 	  	  	   <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
-            	 	  	  </div>
-            	 	  </div>
-            	 </div>
-            	 <div class="links_block">
-            	 	   <ul>
-            	 	   	   <li><a class="link1" href="#">прайс</a></li>
-            	 	   	   <li><a class="link2" href="#">акции</a></li>
-            	 	   	   <li><a class="link3" href="#">отзывы</a></li>
-            	 	   	   <li><a class="link4" href="#">студия</a></li>
-            	 	   	   <li><a class="link5" href="#">до/после</a></li>
-            	 	   </ul>
-            	 </div>
+                <div class="top_banner">
+                    <div class="container">
+                        <span class="decoration_item1"></span>
+                        <span class="decoration_item2"></span>
+                        <span class="decoration_item3"></span>
+                        <span class="decoration_item4"></span>
+                        <span class="txt">NEW BEAUTY FORMULA</span>
+                        <span class="logo_banner"></span>
+                        <div class="banner_slider">
+                            <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
+                            <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
+                            <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
+                            <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
+                            <div class="slide"><span class="img_block"><img src="img/banner/banner_img.jpg" alt="banner_img"></span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="links_block">
+                    <ul>
+                        <li><a class="link1" href="#">прайс</a></li>
+                        <li><a class="link2" href="#">акции</a></li>
+                        <li><a class="link3" href="#">отзывы</a></li>
+                        <li><a class="link4" href="#">студия</a></li>
+                        <li><a class="link5" href="#">до/после</a></li>
+                    </ul>
+                </div>
+                <div class="map">
+                    <div class="container">
+                        <div class="title_section">
+                            <span class="title"><span>crystal</span> maps</span>
+                        </div>
+                        <div class="title_desription">
+                            <p><span>Улыбка</span> — основа коммуникации в человеческом сообществе. <br>
+                                <span>Улыбка</span> является наиболее узнаваемым выражением лица. Люди могут распознать <span>улыбку</span> на расстоянии до 100 метров. <br>
+                                CRYSTAL способствует созданию дружелюбной и позитвной атмосферы в обществе.
+                            </p>
+                            <span class="post_txt">Присоединиться к привлекательным людям с хорошим настроением можно по адресам</span>
+                        </div>
+                        <div class="map_container">
+                            <div class="map">
+                                <span class="decoration"></span>
+                                <iframe src="https://yandex.ua/map-widget/v1/-/CBBOiRvzSA" frameborder="1" allowfullscreen="true"></iframe>
+                            </div>
+                        </div>
+                        <span class="more_crystal"><a href="#">все crystal</a></span>
+                    </div>
+                </div>
+                <span class="letter_item"></span>
+                <div class="crystal_labs">
+                    <span class="decoration_item"></span>
+                    <div class="container">
+                        <div class="title_section">
+                            <span class="title"><span>crystal</span> labs</span>
+                        </div>
+                        <div class="title_desription">
+                            <p><span>Улыбка</span> — основа коммуникации в человеческом сообществе. <br>
+                                <span>Улыбка</span> является наиболее узнаваемым выражением лица. Люди могут распознать <span>улыбку</span> на расстоянии до 100 метров. <br>
+                                CRYSTAL способствует созданию дружелюбной и позитвной атмосферы в обществе.
+                            </p>
+                            <span class="post_txt">Присоединиться к привлекательным людям с хорошим настроением можно по адресам</span>
+                        </div>
+                        <div class="labs_container">
+                            <span class="arrow_left"></span>
+                            <span class="arrow_right"></span>
+                            <div class="slider_labs">
+                                <div class="slide">
+                                    <div class="img_block">
+                                        <div class="img_container">
+                                            <img src="img/labs/lab1.png" alt="lab">
+                                        </div>
+                                    </div>
+                                    <div class="bottom_section">
+                                        <div class="rating">
+                                            <span class="stars"></span>
+                                            <span class="city">МСК</span>
+                                        </div>
+                                        <div class="title_block">
+                                            <span class="title_block_top">CRYSTAL</span>
+                                            <span class="title_block_bottom">павелецкая</span>
+                                        </div>
+                                        <a class="slide_link" href="#">записаться онлайн</a>
+                                    </div>
+                                </div>
+                                <div class="slide">
+                                    <div class="img_block">
+                                        <div class="img_container">
+                                            <img src="img/labs/lab1.png" alt="lab">
+                                        </div>
+                                    </div>
+                                    <div class="bottom_section">
+                                        <div class="rating">
+                                            <span class="stars"></span>
+                                            <span class="city">МСК</span>
+                                        </div>
+                                        <div class="title_block">
+                                            <span class="title_block_top">CRYSTAL</span>
+                                            <span class="title_block_bottom">Бауманская</span>
+                                        </div>
+                                        <a class="slide_link" href="#">записаться онлайн</a>
+                                    </div>
+                                </div>
+                                <div class="slide">
+                                    <div class="img_block">
+                                        <div class="img_container">
+                                            <img src="img/labs/lab1.png" alt="lab">
+                                        </div>
+                                    </div>
+                                    <div class="bottom_section">
+                                        <div class="rating">
+                                            <span class="stars"></span>
+                                            <span class="city">зеленоград</span>
+                                        </div>
+                                        <div class="title_block">
+                                            <span class="title_block_top">CRYSTAL</span>
+                                            <span class="title_block_bottom">столица</span>
+                                        </div>
+                                        <a class="slide_link" href="#">записаться онлайн</a>
+                                    </div>
+                                </div>
+                                <div class="slide">
+                                    <div class="img_block">
+                                        <div class="img_container">
+                                            <img src="img/labs/lab1.png" alt="lab">
+                                        </div>
+                                    </div>
+                                    <div class="bottom_section">
+                                        <div class="rating">
+                                            <span class="stars"></span>
+                                            <span class="city">МСК</span>
+                                        </div>
+                                        <div class="title_block">
+                                            <span class="title_block_top">CRYSTAL</span>
+                                            <span class="title_block_bottom">павелецкая</span>
+                                        </div>
+                                        <a class="slide_link" href="#">записаться онлайн</a>
+                                    </div>
+                                </div>
+                                <div class="slide">
+                                    <div class="img_block">
+                                        <div class="img_container">
+                                            <img src="img/labs/lab1.png" alt="lab">
+                                        </div>
+                                    </div>
+                                    <div class="bottom_section">
+                                        <div class="rating">
+                                            <span class="stars"></span>
+                                            <span class="city">МСК</span>
+                                        </div>
+                                        <div class="title_block">
+                                            <span class="title_block_top">CRYSTAL</span>
+                                            <span class="title_block_bottom">Бауманская</span>
+                                        </div>
+                                        <a class="slide_link" href="#">записаться онлайн</a>
+                                    </div>
+                                </div>
+                                <div class="slide">
+                                    <div class="img_block">
+                                        <div class="img_container">
+                                            <img src="img/labs/lab1.png" alt="lab">
+                                        </div>
+                                    </div>
+                                    <div class="bottom_section">
+                                        <div class="rating">
+                                            <span class="stars"></span>
+                                            <span class="city">зеленоград</span>
+                                        </div>
+                                        <div class="title_block">
+                                            <span class="title_block_top">CRYSTAL</span>
+                                            <span class="title_block_bottom">столица</span>
+                                        </div>
+                                        <a class="slide_link" href="#">записаться онлайн</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <span class="letter_item"></span>
+                <div class="brands">
+                    <div class="container">
+                        <div class="title_section">
+                            <span class="title"><span>crystal</span> brands</span>
+                        </div>
+                        <div class="title_desription">
+                            <p><span>Улыбка</span> — основа коммуникации в человеческом сообществе. <br>
+                                <span>Улыбка</span> является наиболее узнаваемым выражением лица. Люди могут распознать <span>улыбку</span> на расстоянии до 100 метров. <br>
+                                CRYSTAL способствует созданию дружелюбной и позитвной атмосферы в обществе.
+                            </p>
+                            <span class="post_txt">Присоединиться к привлекательным людям с хорошим настроением можно по адресам</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Sripts-->
@@ -80,5 +244,4 @@
         <script src="libs/slick-1.8.1/slick/slick.min.js"></script>
         <script src="js/common.js"></script>
     </body>
-
 </html>
