--- a/Shop/brand-collections-page/app/index.html
+++ b/Shop/brand-collections-page/app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+F<!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="utf-8">
@@ -1227,13 +1227,23 @@
                                 <img src="images/content/brands/roca.svg" alt="roca">
                             </div>
                             <div class="description_block">
-                                <p>Roca Group имеет представительства в 135 странах и располагает 71 заводом, на которых занято более 22 тыс. сотрудников. Компания выпускает товары для ванных комнат (ванны, санитарную керамику, смесители, аксессуары и мебель) под марками Laufen, Roca, Jika, Santek, Santeri, «Акватон», Pool-spa и др., а также керамическую плитку.</p>
+                                <div class="text_content">
+                                     <p>Roca Group имеет представительства в 135 странах и располагает 71 заводом, на которых занято более 22 тыс. сотрудников. Компания выпускает товары для ванных комнат (ванны, санитарную керамику, смесители, аксессуары и мебель) под марками Laufen, Roca, Jika, Santek, Santeri, «Акватон», Pool-spa и др., а также керамическую плитку.</p>
+                                     <p>В июне 2009 года, Roca открыл двери нового здания c эмблемой марки - Roca Barcelona Gallery (спроектировано студией Carlos Ferrater OAB). Пространство для проведения культурных мероприятий и выставок, связанных с дизайном, архитектурой, культурой и искусством.</p>
+                                     <p>Roca Group имеет представительства в 135 странах и располагает 71 заводом, на которых занято более 22 тыс. сотрудников. Компания выпускает товары для ванных комнат (ванны, санитарную керамику, смесители, аксессуары и мебель) под марками Laufen, Roca, Jika, Santek, Santeri, «Акватон», Pool-spa и др., а также керамическую плитку.</p>
+                                     <p>В июне 2009 года, Roca открыл двери нового здания c эмблемой марки - Roca Barcelona Gallery (спроектировано студией Carlos Ferrater OAB). Пространство для проведения культурных мероприятий и выставок, связанных с дизайном, архитектурой, культурой и искусством.</p>     
+                                </div>
                                 <div class="links_section">
+                                    <a class="more" href="#"><span>Подробнее</span></a>
                                     <a href="#"><span>Вce о бренде</span></a>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <button type="button" class="show_info">
+                            <span>Подробнее о бренде</span>
+                            <i class="icon-angle-down"></i>
+                        </button>
                 </div>
                 <div class="brand_categories_block">
                     <div class="container">
