--- a/Shop/brand-page/app/index.html
+++ b/Shop/brand-page/app/index.html
@@ -1197,11 +1197,18 @@
             	 	   	   	    <img src="images/content/brands/roca.svg" alt="roca">
             	 	   	   </div>
             	 	   	   <div class="description_block">
-            	 	   	   	    <p>Roca Group имеет представительства в 135 странах и располагает 71 заводом, на которых занято более 22 тыс. сотрудников. Компания выпускает товары для ванных комнат (ванны, санитарную керамику, смесители, аксессуары и мебель) под марками Laufen, Roca, Jika, Santek, Santeri, «Акватон», Pool-spa и др., а также керамическую плитку.</p>
-            	 	   	   	    <p>В июне 2009 года, Roca открыл двери нового здания c эмблемой марки - Roca Barcelona Gallery (спроектировано студией Carlos Ferrater OAB). Пространство для проведения культурных мероприятий и выставок, связанных с дизайном, архитектурой, культурой и искусством.</p>
+            	 	   	   	    <div class="text_content">
+                                     <p>Roca Group имеет представительства в 135 странах и располагает 71 заводом, на которых занято более 22 тыс. сотрудников. Компания выпускает товары для ванных комнат (ванны, санитарную керамику, смесители, аксессуары и мебель) под марками Laufen, Roca, Jika, Santek, Santeri, «Акватон», Pool-spa и др., а также керамическую плитку.</p>
+                                     <p>В июне 2009 года, Roca открыл двери нового здания c эмблемой марки - Roca Barcelona Gallery (спроектировано студией Carlos Ferrater OAB). Пространство для проведения культурных мероприятий и выставок, связанных с дизайном, архитектурой, культурой и искусством.</p>
+                                     <p>Roca Group имеет представительства в 135 странах и располагает 71 заводом, на которых занято более 22 тыс. сотрудников. Компания выпускает товары для ванных комнат (ванны, санитарную керамику, смесители, аксессуары и мебель) под марками Laufen, Roca, Jika, Santek, Santeri, «Акватон», Pool-spa и др., а также керамическую плитку.</p>
+                                     <p>В июне 2009 года, Roca открыл двери нового здания c эмблемой марки - Roca Barcelona Gallery (спроектировано студией Carlos Ferrater OAB). Пространство для проведения культурных мероприятий и выставок, связанных с дизайном, архитектурой, культурой и искусством.</p>     
+                                </div>
             	 	   	   	    <div class="links_section">
-            	 	   	   	    	 <a class="video" href="#"><span class="video_ico">Видео о бренде</span>(35)</a>
-            	 	   	   	    	 <a class="rev" href="#"><span class="rev_ico">Отзывы</span>(35)</a>
+                                    <a class="more" href="#"><span>Подробнее</span></a>
+            	 	   	   	    	<div class="links">
+                                        <a class="video" href="#"><span class="video_ico">Видео о бренде</span>(35)</a>
+                                        <a class="rev" href="#"><span class="rev_ico">Отзывы</span>(35)</a>        
+                                    </div>
             	 	   	   	    </div>
             	 	   	   </div>
             	 	   </div>
