--- a/Shop/brand-page/app/index.html
+++ b/Shop/brand-page/app/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" type="text/css" href="css/slick.css" media="all">
     <link rel="stylesheet" type="text/css" href="css/balloon.css" media="all">
     <link rel="stylesheet" type="text/css" href="css/select2.css" media="all">
+    <link rel="stylesheet" type="text/css" href="css/magnific-popup.css" media="all">
+    <link rel="stylesheet" type="text/css" href="css/nanoscroller.css" media="all">
     <link rel="stylesheet" type="text/css" href="css/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="css/brand.css" media="all">
 </head>
@@ -1380,7 +1382,7 @@
             	 </div>
             </div>
             <span class="all_collections_link">
-            	 <a href="#"><span>Все коллекции</span></a>
+            	 <a href="#modal-popup" class="hinge wrap_image" data-effect="mfp-move-horizontal"><span>Все коллекции</span></a>
             </span>
         </div>
         <div class="footer">
@@ -1549,6 +1551,49 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div id="modal-popup" class="description_modal modal_container mfp-with-anim mfp-hide">
+            <div class="modal_heading">
+                <div class="modal_wrap">
+                    <div class="modal_title">Все коллекции</div>
+                </div>
+            </div>
+            <div class="nano">
+                <div class="nano-content">
+                    <ul>
+                        <li><a href="#">Khrtoma</a></li>
+                        <li><a href="#">Element</a></li>
+                        <li><a href="#">Frontalis</a></li>
+                        <li><a href="#">Meridian</a></li>
+                        <li><a href="#">Dama</a></li>
+                        <li><a href="#">Khrtoma</a></li>
+                        <li><a href="#">Element</a></li>
+                        <li><a href="#">Frontalis</a></li>
+                        <li><a href="#">Meridian</a></li>
+                        <li><a href="#">Dama</a></li>
+                        <li><a href="#">Khrtoma</a></li>
+                        <li><a href="#">Element</a></li>
+                        <li><a href="#">Frontalis</a></li>
+                        <li><a href="#">Meridian</a></li>
+                        <li><a href="#">Dama</a></li>
+                        <li><a href="#">Khrtoma</a></li>
+                        <li><a href="#">Element</a></li>
+                        <li><a href="#">Frontalis</a></li>
+                        <li><a href="#">Meridian</a></li>
+                        <li><a href="#">Dama</a></li>
+                        <li><a href="#">Khrtoma</a></li>
+                        <li><a href="#">Element</a></li>
+                        <li><a href="#">Frontalis</a></li>
+                        <li><a href="#">Meridian</a></li>
+                        <li><a href="#">Dama</a></li>
+                        <li><a href="#">Khrtoma</a></li>
+                        <li><a href="#">Element</a></li>
+                        <li><a href="#">Frontalis</a></li>
+                        <li><a href="#">Meridian</a></li>
+                        <li><a href="#">Dama</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
